--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 				<img src="images/Logo/AACE.jpg" width="200" height="88">
 				<img src="images/Logo/accubid.jpg" width="200" height="88">
 				<img src="images/Logo/agile.jpg" width="200" height="88">
-				<img src="images/Logo/Autocad.jpg" width="200" height="88">
+				<img src="images/Logo/AutoCad.jpg" width="200" height="88">
 				<img src="images/Logo/BIM.jpg" width="250" height="88">
 				<img src="images/Logo/Bluebeam.jpg" width="250" height="88">
 				<img src="images/Logo/bootstrap.jpg" width="100" height="88">
