--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 				<h4>Jarod L. Woods</h4>
 				<h4>Project Manager</h4>
 				<ul class="actions1 stacked">
-					<li><a href="Summary.html" class="button big wide smooth-scroll-middle">Summary</a></li>
+					<li><a href="Summary.html" class="button big wide smooth-scroll-middle">SUMMARY</a></li>
 					<li><a href="Education.html" class="button big wide smooth-scroll-middle">EDUCATION</a></li>
 					<li><a href="Skills.html" class="button big wide smooth-scroll-middle">SKILLS</a></li>
 					<!--<li><a href="Experience.html" class="button big wide smooth-scroll-middle">EXPERIENCE</a></li>-->
