--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 		<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 			<div class="content-width">
 				<h4>JAROD L. WOODS</h4>
-				<h4>Project Manager</h4>
+				<h4>PROJECT MANAGER</h4>
 				<ul class="actions1 stacked">
 					<li><a href="Summary.html" class="button big wide smooth-scroll-middle">SUMMARY</a></li>
 					<li><a href="Education.html" class="button big wide smooth-scroll-middle">EDUCATION</a></li>
