--- a/Summary.html
+++ b/Summary.html
@@ -160,7 +160,7 @@
             <h5>Cell Phone Number: 256-310-4418</h5>
             <div class="field">
                 <ul class="actions stacked">
-                    <li><a href="mailto:kcnorthamerica@gmail.com">Email Address: kcnorthamerica@gmail.com</a></li>
+                    <li><a href="mailto:info@kcnorthamerica.com">Email Address: info@kcnorthamerica.com</a></li>
                 </ul>
             </div>
             <div class="inner">
