--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
 			</div>
 		</section>
 		<section class="wrapper style1 align-center">
-			<h1>Contact Information </h1>
+			<!--<h1>Contact Information </h1>-->
 			<h5>Cell Phone Number: 256-310-4418</h5>
 			<div class="field">
 				<ul class="actions stacked">
