--- a/Education.html
+++ b/Education.html
@@ -140,9 +140,9 @@
 		<div class="field">
 			<ul class="icons stacked">
 				<li><a href="https://jarodwoods.github.io/jarodwoods/Summary.html" class="previous">Previous</a></li>
-				<li><a href="https://github.com/jarodwoods"><img src="images/GitHub.jpg" alt="" /></a></li>
-				<li><a href="https://www.linkedin.com/in/jarod-l-woods-19606a41/"><img src="images/Linkedin.jpg" alt="" /></a></li>
-				<li><a href="https://www.codewars.com/users/jarodwoods"><img src="images/codewars.jpg" alt="" /></a></li>
+				<li><a href="https://github.com/jarodwoods"><img src="images/GitHub.jpg" width="75" height="75" /></a></li>
+				<li><a href="https://www.linkedin.com/in/jarodlwoods/"><img src="images/Linkedin.jpg" width="75" height="75" /></a></li>
+				<li><a href="https://www.codewars.com/users/jarodwoods"><img src="images/codewars.jpg" width="75" height="75" /></a></li>
 				<li><a href="https://jarodwoods.github.io/jarodwoods/Skills.html" class="next">Next</a></li>
 			</ul>
 		</div>
