--- a/Experience.html
+++ b/Experience.html
@@ -214,9 +214,9 @@
 			<div class="inner">
 				<ul class="icons">
 					<li><a href="https://jarodwoods.github.io/jarodwoods/Skills.html" class="previous">Previous</a></li>
-					<li><a href="https://github.com/jarodwoods"><img src="images/GitHub.jpg" alt="" /></a></li>
-					<li><a href="https://www.linkedin.com/in/jarod-l-woods-19606a41/"><img src="images/Linkedin.jpg" alt="" /></a></li>
-					<li><a href="https://www.codewars.com/users/jarodwoods"><img src="images/codewars.jpg" alt="" /></a></li>
+					<li><a href="https://github.com/jarodwoods"><img src="images/GitHub.jpg" width="75" height="75" /></a></li>
+					<li><a href="https://www.linkedin.com/in/jarodlwoods/"><img src="images/Linkedin.jpg" width="75" height="75" /></a></li>
+					<li><a href="https://www.codewars.com/users/jarodwoods"><img src="images/codewars.jpg" width="75" height="75" /></a></li>
 					<li><a href="https://jarodwoods.github.io/jarodwoods/Portfolio.html" class="next">Next</a></li>
 				</ul>
 			</div>
