--- a/Education.html
+++ b/Education.html
@@ -138,7 +138,7 @@
 			</ul>
 		</div>
 		<div class="field">
-			<ul class="icons stacked">
+			<ul class="icons">
 				<li><a href="https://jarodwoods.github.io/jarodwoods/Summary.html" class="previous">Previous</a></li>
 				<li><a href="https://github.com/jarodwoods"><img src="images/GitHub.jpg" width="75" height="75" /></a></li>
 				<li><a href="https://www.linkedin.com/in/jarodlwoods/"><img src="images/Linkedin.jpg" width="75" height="75" /></a></li>
