--- a/Education.html
+++ b/Education.html
@@ -137,7 +137,7 @@
 				<li><a href="mailto:info@kcnorthamerica.com">Email Address: info@kcnorthamerica.com</a></li>
 			</ul>
 		</div>
-		<div class="field">
+		<div class="inner">
 			<ul class="icons">
 				<li><a href="https://jarodwoods.github.io/jarodwoods/Summary.html" class="previous">Previous</a></li>
 				<li><a href="https://github.com/jarodwoods"><img src="images/GitHub.jpg" width="75" height="75" /></a></li>
