--- a/Summary.html
+++ b/Summary.html
@@ -137,41 +137,43 @@
                     Department of Energy (DOE), Nuclear Regulatory Commission (NRC), Department of Defense (DOD)<br>
                 </p>
                 <!--<h2>North American Industry Classification System (NAICS) Code(s) </h2>
-            <p>
-                I’ve worked with the following (NAICS) Codes:<br>
-                236210 - Industrial Building Construction<br>
-                236220 - Commercial and Institutional Building Construction<br>
-                237120 - Oil and Gas Pipeline and Related Structures Construction<br>
-                237130 - Power and Communication Line and Related Structures Construction<br>
-                237990 - Other Heavy and Civil Engineering Construction<br>
-                332999 - All Other Miscellaneous Fabricated Metal Product Manufacturing<br>
-                541310 - Architectural, Engineering, and Related Services<br>
-                541330 - Engineering Services<br>
-                541340 - Drafting Services<br>
-                541350 - Building Inspection Services<br>
-                541420 - Industrial Design Services<br>
-                5415 - Computer Systems Design and Related Services<br>
-                541511 - Custom Computer Programming Services<br>
-                541512 - Computer Systems Design Services<br>
-                541611 - Administrative Management and General Management Consulting Services<br>
-            </p>-->
+                <p>
+                    I’ve worked with the following (NAICS) Codes:<br>
+                    236210 - Industrial Building Construction<br>
+                    236220 - Commercial and Institutional Building Construction<br>
+                    237120 - Oil and Gas Pipeline and Related Structures Construction<br>
+                    237130 - Power and Communication Line and Related Structures Construction<br>
+                    237990 - Other Heavy and Civil Engineering Construction<br>
+                    332999 - All Other Miscellaneous Fabricated Metal Product Manufacturing<br>
+                    541310 - Architectural, Engineering, and Related Services<br>
+                    541330 - Engineering Services<br>
+                    541340 - Drafting Services<br>
+                    541350 - Building Inspection Services<br>
+                    541420 - Industrial Design Services<br>
+                    5415 - Computer Systems Design and Related Services<br>
+                    541511 - Custom Computer Programming Services<br>
+                    541512 - Computer Systems Design Services<br>
+                    541611 - Administrative Management and General Management Consulting Services<br>
+                </p>-->
             </div>
-                <h5>Cell Phone Number: 256-310-4418</h5>
-                <div class="field">
-                    <ul class="actions stacked">
-                        <li><a href="mailto:info@kcnorthamerica.com">Email Address: info@kcnorthamerica.com</a></li>
-                    </ul>
-                </div>
-                <div class="inner">
-                    <ul class="icons">
-                        <li><a href="https://jarodwoods.github.io/jarodwoods" class="previous">Previous</a></li>
-                        <li><a href="https://github.com/jarodwoods"><img src="images/GitHub.jpg" width="75" height="75" /></a></li>
-                        <li><a href="https://www.linkedin.com/in/jarodlwoods/"><img src="images/Linkedin.jpg" width="75" height="75" /></a></li>
-                        <li><a href="https://www.codewars.com/users/jarodwoods"><img src="images/codewars.jpg" width="75" height="75" /></a></li>
-                        <li><a href="https://jarodwoods.github.io/jarodwoods/Education.html" class="next">Next</a></li>
-                    </ul>
-                 </div>
-         </div>
+    </section>
+    <section class="wrapper style1 align-center">
+        <h5>Cell Phone Number: 256-310-4418</h5>
+        <div class="field">
+            <ul class="actions stacked">
+                <li><a href="mailto:info@kcnorthamerica.com">Email Address: info@kcnorthamerica.com</a></li>
+            </ul>
+        </div>
+        <div class="inner">
+            <ul class="icons">
+                <li><a href="https://jarodwoods.github.io/jarodwoods" class="previous">Previous</a></li>
+                <li><a href="https://github.com/jarodwoods"><img src="images/GitHub.jpg" width="75" height="75" /></a></li>
+                <li><a href="https://www.linkedin.com/in/jarodlwoods/"><img src="images/Linkedin.jpg" width="75" height="75" /></a></li>
+                <li><a href="https://www.codewars.com/users/jarodwoods"><img src="images/codewars.jpg" width="75" height="75" /></a></li>
+                <li><a href="https://jarodwoods.github.io/jarodwoods/Education.html" class="next">Next</a></li>
+            </ul>
+        </div>
+        </div>
     </section>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/js/jquery.scrollex.min.js"></script>
