--- a/Summary.html
+++ b/Summary.html
@@ -137,25 +137,26 @@
                     Department of Energy (DOE), Nuclear Regulatory Commission (NRC), Department of Defense (DOD)<br>
                 </p>
                 <!--<h2>North American Industry Classification System (NAICS) Code(s) </h2>
-                <p>
-                    I’ve worked with the following (NAICS) Codes:<br>
-                    236210 - Industrial Building Construction<br>
-                    236220 - Commercial and Institutional Building Construction<br>
-                    237120 - Oil and Gas Pipeline and Related Structures Construction<br>
-                    237130 - Power and Communication Line and Related Structures Construction<br>
-                    237990 - Other Heavy and Civil Engineering Construction<br>
-                    332999 - All Other Miscellaneous Fabricated Metal Product Manufacturing<br>
-                    541310 - Architectural, Engineering, and Related Services<br>
-                    541330 - Engineering Services<br>
-                    541340 - Drafting Services<br>
-                    541350 - Building Inspection Services<br>
-                    541420 - Industrial Design Services<br>
-                    5415 - Computer Systems Design and Related Services<br>
-                    541511 - Custom Computer Programming Services<br>
-                    541512 - Computer Systems Design Services<br>
-                    541611 - Administrative Management and General Management Consulting Services<br>
-                </p>-->
+        <p>
+            I’ve worked with the following (NAICS) Codes:<br>
+            236210 - Industrial Building Construction<br>
+            236220 - Commercial and Institutional Building Construction<br>
+            237120 - Oil and Gas Pipeline and Related Structures Construction<br>
+            237130 - Power and Communication Line and Related Structures Construction<br>
+            237990 - Other Heavy and Civil Engineering Construction<br>
+            332999 - All Other Miscellaneous Fabricated Metal Product Manufacturing<br>
+            541310 - Architectural, Engineering, and Related Services<br>
+            541330 - Engineering Services<br>
+            541340 - Drafting Services<br>
+            541350 - Building Inspection Services<br>
+            541420 - Industrial Design Services<br>
+            5415 - Computer Systems Design and Related Services<br>
+            541511 - Custom Computer Programming Services<br>
+            541512 - Computer Systems Design Services<br>
+            541611 - Administrative Management and General Management Consulting Services<br>
+        </p>-->
             </div>
+        </div>
     </section>
     <section class="wrapper style1 align-center">
         <h5>Cell Phone Number: 256-310-4418</h5>
