--- a/Summary.html
+++ b/Summary.html
@@ -100,79 +100,79 @@
             </div>
         </div>
     </div>
-        <section class="banner style5">
-            <div>
-                <h1>CAREER SUMMARY</h1>
-                <div class="border">
-                    <h2>Project Management</h2>
-                    <p>
-                        Project Management Professional with extensive experience as:<br>
-                        Agile Scrum Master, Portfolio Analyst, EPC Project Management, IT Project Management<br>
-                        Management Consulting, Plant Maintenance, and Owners Representative<br>
-                        I have active secret security clearance with the DOD - Department of Defense<br>
-                        I have held SAP, Primavera P6, and AutoCAD SME status at several facilities<br>
-                    </p>
-                    <h2>Project Management team Involvement</h2>
-                    <p>
-                        I have been a member of the following Project Management teams:<br>
-                        Joint Venture Project support, Rapid Results, Root Cause Analysis, Business Improvement<br>
-                        Corrective Action, Integrated Product, Continuous Improvement, Cross-Functional Teams<br>
-                    </p>
-                    <h2>Project Controls</h2>
-                    <p>
-                        I have extensive experience in project controls as:<br>
-                        Project Controls Manager, Scheduling, Planning, Estimating, Database Analyst, SAP ERP system integration<br>
-                        Budget & Cost Control, Creating & Managing Historical Database, Certifying an Earned Value Management process<br>
-                        Defense Contract Management Agency (DCMA) 14-point Schedule Assessment, NASA Schedule Management<br>
-                        Creating a Project controls department, Created Critical path package process due to size of the integrated Master Schedules<br>
-                        Creating and revising Project control procedures, Planning, Scheduling, Estimating, Budget, and cost control<br>
-                        Creating a process for barcode scanning, data collection, and GPS for Work Orders to an SAP system<br>
-                    </p>
-                    <h2>Contracts, Regulations, & Agencies</h2>
-                    <p>
-                        I’ve worked with the following Government Contracts, Regulations, & Agencies<br>
-                        Firm-Fixed-Price (FFP), Federal Acquisition Regulations System (FAR), Defense Federal Acquisition Regulation (DFAR)<br>
-                        Small Business Administration (SBA), Department of Labor (DOL), Davis-Bacon and Related Acts (DBRA)<br>
-                        McNamara-O'Hara Service Contract, Defense Contract Management Agency (DCMA), Defense Contract Audit Agency (DCAA)<br>
-                        Department of Energy (DOE), Nuclear Regulatory Commission (NRC), Department of Defense (DOD)<br>
-                    </p>
-                    <!--<h2>North American Industry Classification System (NAICS) Code(s) </h2>
+    <section class="banner style5">
+        <div>
+            <h1>CAREER SUMMARY</h1>
+            <div class="border">
+                <h2>Project Management</h2>
                 <p>
-                    I’ve worked with the following (NAICS) Codes:<br>
-                    236210 - Industrial Building Construction<br>
-                    236220 - Commercial and Institutional Building Construction<br>
-                    237120 - Oil and Gas Pipeline and Related Structures Construction<br>
-                    237130 - Power and Communication Line and Related Structures Construction<br>
-                    237990 - Other Heavy and Civil Engineering Construction<br>
-                    332999 - All Other Miscellaneous Fabricated Metal Product Manufacturing<br>
-                    541310 - Architectural, Engineering, and Related Services<br>
-                    541330 - Engineering Services<br>
-                    541340 - Drafting Services<br>
-                    541350 - Building Inspection Services<br>
-                    541420 - Industrial Design Services<br>
-                    5415 - Computer Systems Design and Related Services<br>
-                    541511 - Custom Computer Programming Services<br>
-                    541512 - Computer Systems Design Services<br>
-                    541611 - Administrative Management and General Management Consulting Services<br>
-                </p>-->
-                </div>
+                    Project Management Professional with extensive experience as:<br>
+                    Agile Scrum Master, Portfolio Analyst, EPC Project Management, IT Project Management<br>
+                    Management Consulting, Plant Maintenance, and Owners Representative<br>
+                    I have active secret security clearance with the DOD - Department of Defense<br>
+                    I have held SAP, Primavera P6, and AutoCAD SME status at several facilities<br>
+                </p>
+                <h2>Project Management team Involvement</h2>
+                <p>
+                    I have been a member of the following Project Management teams:<br>
+                    Joint Venture Project support, Rapid Results, Root Cause Analysis, Business Improvement<br>
+                    Corrective Action, Integrated Product, Continuous Improvement, Cross-Functional Teams<br>
+                </p>
+                <h2>Project Controls</h2>
+                <p>
+                    I have extensive experience in project controls as:<br>
+                    Project Controls Manager, Scheduling, Planning, Estimating, Database Analyst, SAP ERP system integration<br>
+                    Budget & Cost Control, Creating & Managing Historical Database, Certifying an Earned Value Management process<br>
+                    Defense Contract Management Agency (DCMA) 14-point Schedule Assessment, NASA Schedule Management<br>
+                    Creating a Project controls department, Created Critical path package process due to size of the integrated Master Schedules<br>
+                    Creating and revising Project control procedures, Planning, Scheduling, Estimating, Budget, and cost control<br>
+                    Creating a process for barcode scanning, data collection, and GPS for Work Orders to an SAP system<br>
+                </p>
+                <h2>Contracts, Regulations, & Agencies</h2>
+                <p>
+                    I’ve worked with the following Government Contracts, Regulations, & Agencies<br>
+                    Firm-Fixed-Price (FFP), Federal Acquisition Regulations System (FAR), Defense Federal Acquisition Regulation (DFAR)<br>
+                    Small Business Administration (SBA), Department of Labor (DOL), Davis-Bacon and Related Acts (DBRA)<br>
+                    McNamara-O'Hara Service Contract, Defense Contract Management Agency (DCMA), Defense Contract Audit Agency (DCAA)<br>
+                    Department of Energy (DOE), Nuclear Regulatory Commission (NRC), Department of Defense (DOD)<br>
+                </p>
+                <!--<h2>North American Industry Classification System (NAICS) Code(s) </h2>
+            <p>
+                I’ve worked with the following (NAICS) Codes:<br>
+                236210 - Industrial Building Construction<br>
+                236220 - Commercial and Institutional Building Construction<br>
+                237120 - Oil and Gas Pipeline and Related Structures Construction<br>
+                237130 - Power and Communication Line and Related Structures Construction<br>
+                237990 - Other Heavy and Civil Engineering Construction<br>
+                332999 - All Other Miscellaneous Fabricated Metal Product Manufacturing<br>
+                541310 - Architectural, Engineering, and Related Services<br>
+                541330 - Engineering Services<br>
+                541340 - Drafting Services<br>
+                541350 - Building Inspection Services<br>
+                541420 - Industrial Design Services<br>
+                5415 - Computer Systems Design and Related Services<br>
+                541511 - Custom Computer Programming Services<br>
+                541512 - Computer Systems Design Services<br>
+                541611 - Administrative Management and General Management Consulting Services<br>
+            </p>-->
             </div>
-            <h5>Cell Phone Number: 256-310-4418</h5>
-            <div class="field">
-                <ul class="actions stacked">
-                    <li><a href="mailto:info@kcnorthamerica.com">Email Address: info@kcnorthamerica.com</a></li>
-                </ul>
-            </div>
-            <div class="inner">
-                <ul class="icons">
-                    <li><a href="https://jarodwoods.github.io/jarodwoods" class="previous">Previous</a></li>
-                    <li><a href="https://github.com/jarodwoods"><img src="images/GitHub.jpg" width="75" height="75" /></a></li>
-                    <li><a href="https://www.linkedin.com/in/jarodlwoods/"><img src="images/Linkedin.jpg" width="75" height="75" /></a></li>
-                    <li><a href="https://www.codewars.com/users/jarodwoods"><img src="images/codewars.jpg" width="75" height="75" /></a></li>
-                    <li><a href="https://jarodwoods.github.io/jarodwoods/Education.html" class="next">Next</a></li>
-                </ul>
-            </div>
-        </section>
+        </div>
+        <h5>Cell Phone Number: 256-310-4418</h5>
+        <div class="field">
+            <ul class="actions stacked">
+                <li><a href="mailto:info@kcnorthamerica.com">Email Address: info@kcnorthamerica.com</a></li>
+            </ul>
+        </div>
+        <div class="inner">
+            <ul class="icons">
+                <li><a href="https://jarodwoods.github.io/jarodwoods/Summary.html" class="previous">Previous</a></li>
+                <li><a href="https://github.com/jarodwoods"><img src="images/GitHub.jpg" width="75" height="75" /></a></li>
+                <li><a href="https://www.linkedin.com/in/jarodlwoods/"><img src="images/Linkedin.jpg" width="75" height="75" /></a></li>
+                <li><a href="https://www.codewars.com/users/jarodwoods"><img src="images/codewars.jpg" width="75" height="75" /></a></li>
+                <li><a href="https://jarodwoods.github.io/jarodwoods/Skills.html" class="next">Next</a></li>
+            </ul>
+        </div>
+    </section>
         <script src="assets/js/jquery.min.js"></script>
         <script src="assets/js/jquery.scrollex.min.js"></script>
         <script src="assets/js/jquery.scrolly.min.js"></script>
